--- a/src/shopapp/templates/shopapp/product/product_confirm_delete.html
+++ b/src/shopapp/templates/shopapp/product/product_confirm_delete.html
@@ -1,10 +1,8 @@
 {% extends 'base.html' %}
 
 {% block content %}
-<h3>{{ form_title }}</h3>
 <form action="" method="post">
     {% csrf_token %}
-    {{ form.as_p }}
-    <button type="submit">Создать</button>
+    <button class="btn btn-danger" type="submit">Подтвердить</button>
 </form>
 {% endblock content %}
