--- a/src/shopapp/templates/shopapp/product/product_list.html
+++ b/src/shopapp/templates/shopapp/product/product_list.html
@@ -3,7 +3,9 @@
 {% block content %}
 <form action="" method="post">
     {% csrf_token %}
-    {{form}}
+    {% for field in form%}
+    {{field}}
+    {% endfor %}
     <button class="btn btn-primary" type="submit">Найти</button>
 </form>
 {% for product in object_list %}
