--- a/src/templates/base.html
+++ b/src/templates/base.html
@@ -1,3 +1,4 @@
+{% load static %}
 <!DOCTYPE html>
 <html lang="en">
 
@@ -9,12 +10,57 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
     <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
+    <link rel="stylesheet" href="{% static 'shopapp/css/style.css' %}">
 </head>
 
 <body>
-    {% block content %}
+    <header class="header d-flex justify-content-between align-items-center">
+        <div class="logo">
+            <a href="{% url 'product-list' %}" class="logo"><span style="color:#ff8f2e;">Online</span><span
+                    style="color:#edeceb;">Shop</span></a>
+        </div>
+        <div class="d-flex justify-content-between align-items-center">
+            <div class="search">
+                {% block search_form %}
 
-    {% endblock content %}
+                {% endblock search_form %}
+            </div>
+            <div class="basket">
+                {% block basket %}
+
+                {% endblock basket %}
+            </div>
+        </div>
+    </header>
+
+    <div class="container mt-3 pt-3 border-top">
+        <nav class="navbar navbar-expand-lg bg-light">
+            <div class="container-fluid">
+                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
+                    aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+                <div class="collapse navbar-collapse" id="navbarNav">
+                    <ul class="navbar-nav">
+                        <li class="nav-item">
+                            <a class="nav-link active" aria-current="page" href="{% url 'product-list' %}">Магазин</a>
+                        </li>
+                        <li>
+                            <a class="nav-link active" aria-current="page" href="{% url 'product-list' %}">Просмотреть
+                                заказы</a>
+                        </li>
+
+                    </ul>
+                </div>
+            </div>
+        </nav>
+        {% block content %}
+
+        {% endblock content %}
+    </div>
+    <footer class="footer">
+
+    </footer>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3"
         crossorigin="anonymous"></script>
