--- a/src/shopapp/templates/shopapp/product/product_detail.html
+++ b/src/shopapp/templates/shopapp/product/product_detail.html
@@ -1,5 +1,17 @@
 {% extends 'base.html' %}
 
 {% block content %}
-<p>{{product.name}}</p>
+<a href="{% url 'product-list' %}" class="btn btn-secondary">Назад</a>
+<div class="d-flex justify-content-center">
+    <div class="card" style="width: 50%;">
+        <img src="{{product.image.url}}" class="card-img-top" alt="...">
+        <div class="card-body">
+            <h5 class="card-title">{{product.name}}</h5>
+            <h6 class="card-subtitle mb-2 text-muted">{{product.category.name}}</h6>
+            <p class="card-text">{{product.description}}</p>
+            <a href="{% url 'product-update' product.pk %}" class="btn btn-primary">Редактировать</a>
+            <a href="{% url 'product-delete' product.pk %}" class="btn btn-danger">Удалить</a>
+        </div>
+    </div>
+</div>
 {% endblock content %}
