--- a/src/templates/base.html
+++ b/src/templates/base.html
@@ -45,11 +45,10 @@
                         <li class="nav-item">
                             <a class="nav-link active" aria-current="page" href="{% url 'product-list' %}">Магазин</a>
                         </li>
-                        <li>
-                            <a class="nav-link active" aria-current="page" href="{% url 'product-list' %}">Просмотреть
-                                заказы</a>
+                        <li class="nav-item">
+                            <a class="nav-link active" aria-current="page" href="{% url 'product-create' %}">Добавить
+                                товар</a>
                         </li>
-
                     </ul>
                 </div>
             </div>
